perf: 更新文件读取逻辑优化